--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: emacs-lisp
-env:
-  - EMACS=emacs24
-  - EMACS=emacs-snapshot
+addons:
+  apt:
+    sources:
+      - cassou-emacs
+    packages:
+      - emacs24
 before_install:
-  - sudo add-apt-repository -y ppa:cassou/emacs
-  - sudo add-apt-repository -y ppa:ubuntu-elisp/ppa
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq -yy ${EMACS}-nox
-  - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
-  - export PATH="${HOME}/.cask/bin:$PATH"
+  - curl -fsSL https://github.com/cask/cask/raw/master/go | python
+  - export PATH="$HOME/.cask/bin:$PATH"
 script:
-  - make compile
+  - make all
